# clams

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  GATE_CHECK_NOTES.md  GETTING_STARTED.md  LICENSE  README.md  REVIEW_ISSUES.md  docker-compose.test.yml  docker-compose.yml  gate_output.txt  generate_12_ghap_async_debug.py  generate_api_network_ghap.py  generate_db_debugging_ghap.py  generate_testing_ghaps.py  pyproject.toml  reproduce_bug.py
.claude/: CLAMS_DESIGN.md  HANDOFF.md  clams.db  claws.db  project.json  settings.local.json
.claude/checks/: check_hardcoded_paths.py  path_allowlist.txt
.claude/commands/: wrapup.md
.claude/gates/: check_bug_investigation.sh  check_frontend.sh  check_linter.sh  check_linter_generic.sh  check_linter_go.sh  check_linter_javascript.sh  check_linter_python.sh  check_linter_rust.sh  check_linter_shell.sh  check_orphans.sh  check_orphans_generic.sh  check_orphans_python.sh  check_platform.sh  check_tests.sh  check_tests_generic.sh  check_tests_go.sh  check_tests_javascript.sh  check_tests_python.sh  check_tests_rust.sh  check_todos.sh  check_types.sh  check_types_javascript.sh  check_types_python.sh  registry.json
.claude/hooks/: check_hash_eq.py  check_heavy_imports.py  check_subprocess.py  config.yaml  ghap_checkin.sh  mcp_client.py  outcome_capture.sh  session_end.sh  session_start.sh  user_prompt_submit.sh
.claude/journal/: .session_id  session_entries.jsonl
.claude/roles/: _base.md  ai-dl.md  architect.md  backend.md  bug-investigator.md  debugger.md  doc-writer.md  e2e-runner.md  frontend.md  infra.md  planning.md  product.md  proposal-reviewer.md  qa.md  reviewer.md  spec-reviewer.md  ux.md
.claude/templates/: bug-report.md
bug_reports/: BUG-001.md  BUG-002.md  BUG-003.md  BUG-005.md  BUG-006.md  BUG-007.md  BUG-008.md  BUG-009.md  BUG-010.md  BUG-011.md  BUG-012.md  BUG-013.md  BUG-014.md  BUG-015.md  BUG-016.md  BUG-017.md  BUG-019.md  BUG-020.md  BUG-021.md  BUG-022.md  BUG-023.md  BUG-024.md  BUG-025.md  BUG-026.md  BUG-027.md  BUG-028.md  BUG-029.md  BUG-030.md  BUG-031.md  BUG-033.md  BUG-034.md  BUG-036.md  BUG-037.md  BUG-040.md  BUG-041.md  BUG-042.md  BUG-043.md  BUG-050.md  BUG-051.md  BUG-052.md  (+35 more)
calm-visualizer/: index.html
calm-visualizer/js/: config.js  main.js  three-setup.js  timeline-controller.js
calm-visualizer/lib/: .gitkeep
changelog.d/: BUG-001.md  BUG-002.md  BUG-005.md  BUG-006.md  BUG-008.md  BUG-009.md  BUG-010.md  BUG-011.md  BUG-012.md  BUG-013.md  BUG-014.md  BUG-015.md  BUG-016.md  BUG-017.md  BUG-019.md  BUG-020.md  BUG-021.md  BUG-022.md  BUG-023.md  BUG-024.md  BUG-025.md  BUG-026.md  BUG-027.md  BUG-028.md  BUG-029.md  BUG-030.md  BUG-031.md  BUG-033.md  BUG-034.md  BUG-036.md  BUG-037.md  BUG-040.md  BUG-041.md  BUG-042.md  BUG-043.md  BUG-050.md  BUG-051.md  BUG-052.md  BUG-053.md  BUG-054.md  (+115 more)
clams/: mcp_client.py
clams-visualizer/: index.html
clams-visualizer/css/: styles.css
clams-visualizer/js/: config.js  main.js  three-setup.js
clams/hooks/: config.yaml  ghap_checkin.sh  outcome_capture.sh  session_end.sh  session_start.sh  user_prompt_submit.sh
clams_scripts/hooks/: README.md  ghap_checkin.sh  outcome_capture.sh  session_start.sh  validate_config.sh
docs/: SYSTEM_AUDIT.md  retrospective-2025-12-14.md  worker-permission-model.md
planning_docs/: AMENDMENTS-hybrid-search.md  RESEARCH-bug-pattern-analysis.md  RESEARCH-collection-audit.md  RESEARCH-type-audit.md  RESEARCH-validation-audit.md  SPEC-001-learning-memory-server.md
planning_docs/BUG-057/: decisions.md  proposal.md
planning_docs/SPEC-002-06/: proposal.md  spec.md
planning_docs/SPEC-002-07/: debug-log.md  proposal.md  spec.md
planning_docs/SPEC-002-08/: proposal.md  spec.md
planning_docs/SPEC-002-09/: proposal.md  spec.md
planning_docs/SPEC-002-11/: IMPLEMENTATION_SUMMARY.md  proposal.md  spec.md
planning_docs/SPEC-002-12/: proposal.md  spec.md
planning_docs/SPEC-002-13/: proposal.md  spec.md
planning_docs/SPEC-002-14/: proposal.md  spec.md
planning_docs/SPEC-002-15/: proposal.md  spec.md
planning_docs/SPEC-002-16/: proposal.md  spec.md
planning_docs/SPEC-002-17/: proposal.md  spec.md
planning_docs/SPEC-002-18/: proposal.md  spec.md
planning_docs/SPEC-002-19/: proposal.md  spec.md
planning_docs/SPEC-003/: proposal.md  spec.md
planning_docs/SPEC-004/: proposal.md  spec.md
planning_docs/SPEC-006/: proposal.md  spec.md
planning_docs/SPEC-007/: proposal.md  spec.md
planning_docs/SPEC-008/: proposal.md  spec.md
planning_docs/SPEC-010/: spec.md
planning_docs/SPEC-011/: proposal.md
planning_docs/SPEC-012/: proposal.md  spec.md
planning_docs/SPEC-013/: spec.md
planning_docs/SPEC-014/: spec.md
planning_docs/SPEC-015/: proposal.md  spec.md
planning_docs/SPEC-016/: spec.md
planning_docs/SPEC-017/: proposal.md  spec.md
planning_docs/SPEC-018/: proposal.md  spec.md
planning_docs/SPEC-019/: spec.md
planning_docs/SPEC-020/: proposal.md  spec.md
planning_docs/SPEC-021/: proposal.md  spec.md
planning_docs/SPEC-022/: proposal.md  spec.md
planning_docs/SPEC-023/: spec.md
planning_docs/SPEC-024/: proposal.md  spec.md
planning_docs/SPEC-025/: proposal.md  spec.md
planning_docs/SPEC-026/: proposal.md  spec.md
planning_docs/SPEC-027/: spec.md
planning_docs/SPEC-028/: proposal.md  spec.md
planning_docs/SPEC-029/: proposal.md  spec.md
planning_docs/SPEC-030/: proposal.md  spec.md
planning_docs/SPEC-031/: spec.md
planning_docs/SPEC-032/: proposal.md  spec.md
planning_docs/SPEC-033/: proposal.md  spec.md
scripts/: cutover.py  install.sh  json_merge.py  uninstall.sh  verify_calm_setup.md  verify_install.py
tests/: __init__.py  conftest.py  test_bug_006_experience_schema.py  test_bug_052_regression.py  test_bug_055_regression.py  test_bug_057_regression.py  test_bug_061_centralized_dirs.py  test_bug_070_regression.py  test_bug_082_regression.py  test_bug_083_regression.py  test_bug_084_regression.py  test_cutover.py  test_gate_dispatch.py  test_greet.py  test_import_isolation.py  test_json_merge.py  test_placeholder.py
(+549 files in other folders)
