[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clams"
version = "0.1.0"
description = "MCP server providing semantic code search and git history analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "qdrant-client",
    "nomic",
    "sentence-transformers",
    "numpy",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-rust",
    "tree-sitter-swift",
    "tree-sitter-java",
    "tree-sitter-cpp",
    "tree-sitter-sql",
    "GitPython",
    "hdbscan",
    "structlog",
    "pydantic-settings",
    "aiosqlite",
    "aiofiles>=23.0.0",
    "einops>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-timeout",
    "hypothesis",
    "ruff",
    "mypy",
]

[project.scripts]
clams-server = "clams.server.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["tests/fixtures/code_samples/malformed.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# JSON schema definitions have long string literals that can't be easily wrapped
"src/clams/server/tools/__init__.py" = ["E501"]
# Docstrings with long parameter descriptions
"src/clams/search/searcher.py" = ["E501"]
# Test files with module-level imports after sys.path manipulation
"tests/integration/test_e2e.py" = ["E402"]
"tests/test_bug_006_experience_schema.py" = ["E402"]
# Test files with long assertions and test data - hard to wrap meaningfully
"tests/**/*.py" = ["E501"]
# Data generation scripts with long string literals
"generate_*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["structlog", "mcp.*", "aiofiles", "hdbscan"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services (deselect with '-m \"not integration\"')",
    "cold_start: tests that verify behavior with no pre-existing data (run with '-m cold_start')",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.6",
]
