[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calm"
version = "0.1.0"
description = "Claude Agent Learning & Management - memory, learning, and orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.23.0,<2.0.0",
    "qdrant-client",
    "nomic",
    "sentence-transformers",
    "numpy",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-rust",
    "tree-sitter-swift",
    "tree-sitter-java",
    "tree-sitter-cpp",
    "tree-sitter-sql",
    "GitPython",
    "hdbscan",
    "structlog",
    "pydantic-settings",
    "aiosqlite",
    "aiofiles>=23.0.0",
    "einops>=0.8.1",
    "click>=8.0.0",
    "uvicorn>=0.31.1",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-timeout",
    "hypothesis",
    "ruff",
    "mypy",
]

[project.scripts]
calm = "calm.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/calm"]

[tool.hatch.build.targets.wheel.force-include]
"src/calm/templates" = "calm/templates"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "tests/fixtures/code_samples/malformed.py",
    "generate_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Data generation scripts have long string literals
"generate_*.py" = ["E501"]
# JSON schema definitions have long string literals that can't be easily wrapped
"src/calm/server/app.py" = ["E501"]
# Test files with long assertions and test data - hard to wrap meaningfully
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["structlog", "mcp.*", "aiofiles", "hdbscan", "calm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
addopts = "-m 'not slow' -rs"
markers = [
    "slow: marks tests as slow (>15s, excluded by default)",
    "integration: marks tests as integration tests requiring external services",
    "cold_start: tests that verify behavior with no pre-existing data",
    # Platform requirement markers (SPEC-033)
    "requires_mps: test requires MPS (Apple Silicon GPU)",
    "requires_cuda: test requires CUDA (NVIDIA GPU)",
    "requires_ripgrep: test requires ripgrep (rg) installed",
    "requires_docker: test requires Docker daemon running",
    "requires_qdrant: test requires Qdrant service available",
    "macos_only: test only runs on macOS",
    "linux_only: test only runs on Linux",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.6",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
